# pycounts_jbar

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  einstein.txt  example.ipynb  make.bat
src/pycounts_jbar/: __init__.py  datasets.py  plotting.py  pycounts_jbar.py
tests/: test_pycounts_jbar.py
